[tool.poetry]
name = "text-generation"
version = "0.6.0"
description = "Hugging Face Text Generation Python Client with Energy Information"
license = "Apache-2.0"
authors = ["Olivier Dehaene <olivier@huggingface.co>", "Jae-Won Chung <jwnchung@umich.edu>"]
maintainers = ["Jae-Won Chung <jwnchung@umich.edu>"]
readme = "README.md"
homepage = "https://github.com/ml-energy/text_generation_energy"
repository = "https://github.com/ml-energy/text_generation_energy"


[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.10"
aiohttp = "^3.8"
huggingface-hub = ">= 0.12, < 1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
